--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -31,3 +31,8 @@
   cmd = nvim -f -c \"Gdiff\" \"$MERGED\"
 [include]
     path = .gitlocal
+[filter "lfs"]
+    smudge = git-lfs smudge -- %f
+    process = git-lfs filter-process
+    required = true
+    clean = git-lfs clean -- %f
